--- a/fasttrack/index.yml
+++ b/fasttrack/index.yml
@@ -12,28 +12,19 @@ metadata:
   ms.author: samanro
   ms.date: 07/03/2019
   localization_priority: Priority
-  ms.openlocfilehash: c890da55f729c321c506493ada7be8b11395e0e7
-  ms.sourcegitcommit: cf6fd5a133d007ea395318540471691860c33303
+  ms.openlocfilehash: a44789bd440b93d4778304bde9d35f6b0cd7ec5b
+  ms.sourcegitcommit: 81ad135578a329f8b0a3325c4e43bb8f90648597
   ms.translationtype: MT
   ms.contentlocale: ru-RU
-  ms.lasthandoff: 02/11/2020
-  ms.locfileid: "41891769"
+  ms.lasthandoff: 08/17/2020
+  ms.locfileid: "46776460"
 conceptualContent:
   items:
   - title: FastTrack для Microsoft 365
     links:
-    - url: /fasttrack/m365-fasttrack-benefit-overview
+    - url: /fasttrack/introduction
       itemType: overview
-      text: Обзор
-    - url: /fasttrack/O365-fasttrack-benefit-for-office-365
-      itemType: concept
-      text: Office 365;
-    - url: /enterprise-mobility-security/Solutions/enterprise-mobility-fasttrack-program
-      itemType: concept
-      text: Enterprise Mobility + Security;
-    - url: /fasttrack/win-10-fasttrack-benefit-for-windows-10
-      itemType: concept
-      text: Windows 10.
+      text: Обзор (включая Office 365, Enterprise Mobility + Security и Windows 10)
   - title: FastTrack для Azure
     links:
     - url: https://azure.microsoft.com/programs/azure-fasttrack/?v=18.03
